# chip8-emulator

./: CMakeLists.txt  GraphicsHandler.cpp  GraphicsHandler.h  README.md  main.cpp
Chip8/: Chip8.cpp  Chip8.h
GraphicsHandler/: GraphicsHandler.cpp  GraphicsHandler.h
roms/: default.ch8  ship.ch8  ship2.ch8  singlepixel.ch8  stairs.ch8  testProgram.ch8
